--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "DSSignature",
-  "short_name": "DSSignature",
+  "name": "Daniel Segarra",
+  "short_name": "Daniel Segarra",
   "icons": [
     {
       "src": "public/favicon.svg",
